--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
                     <input  class="num-button" type="button" value="7">
                     <input  class="num-button" type="button" value="8">
                     <input  class="num-button" type="button" value="9">
-                    <input  class="num-button, operator" type="button" value="*">
+                    <input  class="num-button" type="button" value="*">
                 </div>
 
                 <div class="otherRow">
                     <input  class="num-button" type="button" value="4">
                     <input class="num-button" type="button" value="5">
                     <input class="num-button" type="button" value="6">
-                    <input class="num-button, operator"  type="button" value="-">
+                    <input class="num-button"  type="button" value="-">
                 </div>
                 
                 <div class="otherRow">
                     <input class="num-button" type="button" value="1">
                     <input class="num-button" type="button" value="2">
                     <input class="num-button" type="button" value="3">
-                    <input class="num-button, operator" type="button" value="+">
+                    <input class="num-button" type="button" value="+">
                 </div>
 
                 <div class="otherRow">
